--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Create a Quiz App With Timer Using </title>
-    <link rel="stylesheet" href="csss/style.css">
+    <link rel="stylesheet" href="style/style.css">
     <!-- FontAweome CDN Link for Icons -->
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
 </head>
@@ -73,6 +73,6 @@
         </div>
     </div>
 
-    <script src="jss/app.js"></script>
+    <script src="js/qz.js"></script>
 </body>
 </html>
